--- a/style.css
+++ b/style.css
@@ -5,31 +5,37 @@
 }
 
 body {
-  width: 100%;
-  height: 100%;
+
   background-color: aquamarine;
+}
+
+.container{
+  width: 100%;
+  height: 100vh;
+  
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 h1{
   color: rgb(233, 151, 151);
   font-size: 40px;
   }
   
 
-@media screen and (min-width: 900px) and (max-width 600px) {
+@media screen and (min-width: 600px) and (max-width: 900px) {
   body {
-    background-color: pink;
+    background-color: blue;
   }
-  .cajah1{
+  h1{
   
     font-size: 32px;
 
   }
+}
 
-
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 600px) {
   body {
     background-color: green; 
   }
